--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_speed = 115200
+lib_deps = 
+	miguelbalboa/MFRC522@^1.4.12
+	; mobizt/Firebase Arduino Client Library for ESP8266 and ESP32@^4.4.17
